--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,29 @@
-<p>header works!</p>
+<p>
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <img id="logo" src="https://img.icons8.com/dusk/64/000000/city.png"/>
+      <span id="company_name">Parche</span>
+      <span class="example-spacer"></span>
+
+      <section>
+        <div class="login_btn">
+          <button mat-button>Login</button>
+        </div>
+      </section>
+      <section>
+        <div class="register_btn">
+          <button mat-button>Register</button>
+        </div>
+      </section>
+
+      <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <mat-icon>menu</mat-icon>
+      </button> -->
+
+    </mat-toolbar-row>
+
+
+
+
+
+
