--- a/src/app/search-result/result-component/result-component.component.scss
+++ b/src/app/search-result/result-component/result-component.component.scss
@@ -1,27 +1,95 @@
-mat-grid-list {
-  background-color: blue;
-}
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 
-#list mat-grid-tile {
-  color: white;
-  font-size: 20px;
-  background-color: gray;
+.megaWrap {
+  ul {
+    list-style-type: none;
 
-}
+    li {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+  }
 
-.block {
-  width: 350px;
-  height: 100%;
-  //background-color: red;
-  position: absolute;
-  left: 0;
-}
+  .card {
+    width:1000px;
+    height:300px;
+    background: white;
+    position:relative;
+    left:0;
+    right:0;
+    margin:auto;
+    border: 3px solid rgb(228,28,88);
+    padding: 2px;
+    top:0;
+    bottom:0;
+    border-radius:10px;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55);
 
-.infos {
+    font-family: 'Roboto', sans-serif !important;
+    &_left {
+      width:40%;
+      height:300px;
+      float:left;
+      overflow:hidden;
+      background:transparent;
+      align-items: center;
 
-}
+      img {
+        width:100%;
+        height:100%;
+        border-radius:10px 10px 10px 10px;
+        -webkit-border-radius:10px 10px 10px 10px;
+        -moz-border-radius:10px 10px 10px 10px;
+      }
+    }
+    &_right {
+      width:60%;
+      float:left;
+      background:transparent;
+      height:300px;
+      border-radius:0 10px 10px 0;
+      -webkit-border-radius:0 10px 10px 0;
+      -moz-border-radius:0 10px 10px 0;
+    h1 {
+      color:black;
+      font-family: 'Roboto', sans-serif;
+      font-weight:bold;
+      text-align:left;
+      font-size:40px;
+      margin:20px 0 0 0;
+      padding-left:30px ;
 
-.infos p{
-  float: left;
-  margin: 15px;
+      letter-spacing:1px;
+    }
+      &__details {
+        height: 300px;
+        ul {
+          list-style-type:armenian;
+          padding: 0 0 0 30px;
+          li {
+            display:inline-block;
+            color:#383838;
+            font-family: 'Roboto', sans-serif;
+            font-weight:bold;
+            font-size:20px;
+            padding:0 15px 0 0;
+          }
+        }
+        &___description {
+          color:#383838;
+          padding: 0 40px 0 30px;
+          font-size: 20px;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+  .card:hover {
+
+  }
 }
