--- a/src/app/search-result/result-component/result-component.component.scss
+++ b/src/app/search-result/result-component/result-component.component.scss
@@ -30,7 +30,7 @@
     -moz-border-radius:10px;
     box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55);
 
-    font-family: 'Roboto', sans-serif !important;
+    font-family: 'Monserrat', sans-serif !important;
     &_left {
       width:40%;
       height:300px;
@@ -57,7 +57,7 @@
       -moz-border-radius:0 10px 10px 0;
     h1 {
       color:black;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Monserrat', sans-serif;
       font-weight:bold;
       text-align:left;
       font-size:40px;
@@ -74,7 +74,7 @@
           li {
             display:inline-block;
             color:#383838;
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Monserrat', sans-serif;
             font-weight:bold;
             font-size:20px;
             padding:0 15px 0 0;
