--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,14 +1,11 @@
-<html>
 
-  <head>
-
-  </head>
 
   <body>
-    <img id="image" src="../../assets/images/try3.jpg" >
+    <img id="image" src="../../assets/images/try6.jpg" >
     <div class="overview">
       <div class="container">
       </div>
-      <h1>Jetzt Ladestation finden</h1>
     </div>
+
+<label class="test"></label>
 
