--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,17 +1,14 @@
 .overview {
-  // background-image:url('../../assets/images/try1.jpg');
+  // background-image:url('../../assets/images/try4.jpg');
   opacity: 75%;
   height: 800px;
   text-align: center;
   background-size: cover;
-
 }
 
 #image {
-  top: 10;
-  left: 0;
   position: absolute;
-  height: 90%;
+  height: 50%;
   width: 100%;
 }
 
@@ -45,3 +42,58 @@
 .learn-more a {
   color: #00b0ff;
 }
+
+
+
+
+
+.test {
+  cursor: pointer;
+  display: block;
+  background-clip: padding-box;
+  border-top-width: 1px;
+  border-right-width: 1px;
+  border-bottom-width: 1px;
+  border-left-width: 1px;
+  border-top-style: solid;
+  border-right-style: solid;
+  border-bottom-style: solid;
+  border-left-style: solid;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  border-image-source: initial;
+  border-image-slice: initial;
+  border-image-width: initial;
+  border-image-outset: initial;
+  border-image-repeat: initial;
+  border-top-left-radius: 32px;
+  border-top-right-radius: 32px;
+  border-bottom-right-radius: 32px;
+  border-bottom-left-radius: 32px;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 0%;
+  min-width: 0px;
+  padding-top: 14px;
+  padding-right: 32px;
+  }
+
+
+  .test::before {
+    border-top-width: 0px;
+    border-right-width: 1px;
+    border-top-style: solid;
+    content: "";
+    display: none;
+    height: 32px;
+    margin-top: -16px;
+    position: absolute;
+    right: 0px;
+    top: 50%;
+    z-index: 0;
+    border-left-width: 0px;
+    border-left-style: initial;
+    border-left-color: initial;
+    }
