--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -1,3 +1,8 @@
 <app-parameter-component></app-parameter-component>
 
-<app-result-component></app-result-component>
+<div class="container">
+
+  <app-result-component></app-result-component>
+  <app-gmaps></app-gmaps>
+
+</div>
