--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -23,3 +23,9 @@
   border-radius: 5px;
   margin-right: 5px;
 }
+
+.signout_btn {
+  border: 1px solid white;
+  border-radius: 5px;
+  margin-right: 5px;
+}
