--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,11 +1,35 @@
 
-
-  <body>
-    <img id="image" src="../../assets/images/try6.jpg" >
-    <div class="overview">
-      <div class="container">
+<!-- Navigation -->
+<div class="landing">
+  <div>
+    <div>
+      <img id="image" src="../../assets/images/try6.jpg" >
+      <div class="overview">
+        <div class="container">
+        </div>
       </div>
-    </div>
+  </div>
+  <div class="navigation">
+    <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
+    <input class="btn" placeholder="Stadt">
+    <a>
+      <mat-form-field class="datepicker" appearance="fill">
+        <mat-label class="label_date">Datum</mat-label>
+        <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+          <input matStartDate formControlName="start" placeholder="Start date">
+          <input matEndDate formControlName="end" placeholder="End date">
+        </mat-date-range-input>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
 
-<label class="test"></label>
+        <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+        <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+      </mat-form-field>
+
+    </a>
+    <a href="#" class="search_btn">Suchen</a>
+    <a href="https://twitter.com/freshcontrast" target="_blank" class="footer"></a>
+  </div>
+</div>
+
 
