--- a/src/app/search-result/gmaps/gmaps.component.html
+++ b/src/app/search-result/gmaps/gmaps.component.html
@@ -1,4 +1,4 @@
 <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
 <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js" type="text/javascript" charset="utf-8"></script>
 
-<div #map style="width: 1280px; height: 768px"></div>
+<div #map style="width: 1200px; height: 900px; border: 2px solid rgb(228,28,88);"></div>
