--- a/src/app/search-result/search-result.component.scss
+++ b/src/app/search-result/search-result.component.scss
@@ -1,7 +1,9 @@
 .container {
-  width: 95%;
+  width: 100%;
   margin: 15px;
-  display: inline-block;
+  display: flex;
+  overflow-x: hidden;
+  ;
 
   app-result-component {
     float: left;
