--- a/src/app/register-pp/register-pp.component.scss
+++ b/src/app/register-pp/register-pp.component.scss
@@ -86,6 +86,10 @@ label {
   // border: 1px solid #1e5180;
 }
 
+.course-image-upload {
+  margin-top: 30px;
+}
+
 // .mat-checkbox-checked.mat-accent .mat-checkbox-ripple .mat-ripple-element {
 //   opacity: 0.03 !important;
 //   background-color: #005691 !important;
