--- a/src/app/search-result/result-component/result-component.component.html
+++ b/src/app/search-result/result-component/result-component.component.html
@@ -6,7 +6,7 @@
     <li *ngFor="let parkingPlace of parkingPlaces">
       <div class='card'>
         <div class='card_left'>
-          <img src='../../../assets/images/example.jpg'>
+          <img [src]='parkingPlace.imageUrl ? parkingPlace.imageUrl : standardimg'>
         </div>
         <div class='card_right'>
           <h1>{{parkingPlace.city}}</h1>
