--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -11,7 +11,7 @@
 
 #image {
   position: absolute;
-  height: 60%;
+  height: 40%;
   width: 100%;
 }
 
@@ -41,42 +41,54 @@
   top: 40px;
   position: relative;
   background: transparent;
-  font-family: 'Oswald', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding: 10px;
   border-style: solid;
   width: 800px;
-  border-width: 1px;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 25px;
+  border-width: thin;
+  background-color: rgb(255, 255, 255);
+  border-color: lightgrey;
+  box-shadow: 1px 2px 8px rgb(0 0 0 / 65%);
 }
 
 h1{
   color: black;
   font-weight:100;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .btn{
-  color:grey;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color:rgb(198, 30, 30);
   background:transparent;
   padding:10px 20px;
-  font-size:20px;
+  font-size:18px;
   font-weight: bold;
   border-style: solid;
   border-width: 1px;
-  text-decoration:none;
+  text-decoration:black;
   letter-spacing:2px;
-  text-transform:uppercase;
+  border-radius: 4px;
+}
+
+.btn::placeholder{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: rgb(148, 148, 148);
 }
 
 .btn:hover{
   border:none;
-  background:rgba(0, 0, 0, 0.4);
+  background:rgba(223, 223, 223, 0.4);
   // padding:20px 20px;
   color:#1b1b1b;
 }
 
 .footer{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size:8px;
   clear:both;
   display:contents;
@@ -87,6 +99,7 @@ h1{
 
 .label_date {
 color: black;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .example-form-field {
@@ -95,16 +108,92 @@ color: black;
 
 
 .search_btn{
-  color:rgb(228,28,88);
-  background:transparent;
+  color:rgb(255, 255, 255);
+  background: #c2185b;
   padding:10px 20px;
-  font-size:20px;
+  font-size:18px;
   font-weight: bold;
   border-style: solid;
   border-width: 1px;
   text-decoration:none;
   letter-spacing:2px;
   text-transform:uppercase;
+  border-radius: 7px;
+  margin-left: 4px;
+}
+
+.label_date{
+  color: rgb(125, 125, 125);
+}
+
+
+
+::ng-deep.mat-form-field-underline {
+  background-color: #c2185b  !important;
+}
+
+::ng-deep.mat-form-field-ripple {
+ background-color: #c2185b !important;;
+}
+
+
+mat-datepicker-toggle {
+  color: #c2185b  !important;
+}
+
+.date-input {
+  color: #c2185b;
+}
+
+.date-inputsection {
+  margin: 0;
+  padding: 0;
+}
+.ueberschrift {
+  color: violet;
+  font-size: 10px;
+}
+
+.verlauf {
+    text-align: center;
+    top: 350px;
+    position: relative;
+    font-family: 'Oswald', sans-serif;
+    padding: 5px;
+    padding-left: 5px;
+    border-style: solid;
+    width: 200px;
+    border-radius: 10px;
+    border-width: thin;
+    background-color: rgb(255, 255, 255);
+    border-color: #c2185b;
+    height: 100px;
+    width: 120px;
+    box-shadow: 1px 2px 4px rgb(0 0 0 / 65%);
+    margin: 10px;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.location {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+}
+.park_situation {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 10px;
+  font-weight: bolder;
+  text-align: left;
+}
+
+#umgebung {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight:lighter;
+  font-size: 11px;
 }
 
 
