--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -119,7 +119,7 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
   letter-spacing:2px;
   text-transform:uppercase;
   border-radius: 7px;
-  margin-left: 4px;
+  margin-left: 25px;
 }
 
 .label_date{
@@ -149,6 +149,10 @@ mat-datepicker-toggle {
   margin: 0;
   padding: 0;
 }
+
+.label_date {
+  margin-left: 5px;
+}
 .ueberschrift {
   color: violet;
   font-size: 10px;
@@ -162,7 +166,7 @@ mat-datepicker-toggle {
     padding: 5px;
     padding-left: 5px;
     border-style: solid;
-    width: 200px;
+    // width: 200px;
     border-radius: 10px;
     border-width: thin;
     background-color: rgb(255, 255, 255);
