routering to resultscomponent

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -27,7 +27,7 @@
       </mat-form-field>
 
     </a>
-    <a href="#" class="search_btn">Suchen</a>
+    <a href="#" class="search_btn" routerLink="/results">Suchen</a>
 
     <a href="https://twitter.com/freshcontrast" target="_blank" class="footer"></a>
   </div>
