--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar-row>
       <img id="logo" (click)="onMainMenu()" src="https://img.icons8.com/dusk/64/000000/city.png"/>
       <span id="company_name">Parche</span>
-      <span class="example-spacer"></span>
+      <span class="spacer"></span>
 
       <section>
         <div class="login_btn" *ngIf="!isAuthenticated">
