--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,4 @@
-
+<div class="test">
 <!-- Navigation -->
 <div class="landing">
   <div>
@@ -34,22 +34,24 @@
 </div>
 
 <div class="container">
-<div class="verlauf">
-  <div class="location">Mannheim<br><span id="umgebung">(Umkreis DHBW)</span></div>
-  <p class="park_situation">Freie Parkplätze:</p>
+  <div class="verlauf">
+    <div class="location">Mannheim<br><span id="umgebung">(Umkreis DHBW)</span></div>
+    <p class="park_situation">Freie Parkplätze: <span class="freie_plaetze"><br>10</span></p>
+  </div>
+  <div class="verlauf">
+    <div class="location">Frankfurt <br><span id="umgebung">(Innenstadt)</span></div>
+    <p class="park_situation">Freie Parkplätze: <span class="freie_plaetze"><br>10</span></p>
+  </div>
+  <div class="verlauf">
+    <div class="location">Heppenheim <br><span id="umgebung">(Bahnhof)</span></div>
+    <p class="park_situation">Freie Parkplätze: <span class="freie_plaetze"><br>10</span></p>
+  </div>
+  <div class="verlauf">
+    <div class="location">Stuttgart <br><span id="umgebung">(Kinopolis)</span></div>
+    <p class="park_situation">Freie Parkplätze: <span class="freie_plaetze"><br>10</span></p>
+  </div>
 </div>
-<div class="verlauf">
-  <div class="location">Frankfurt <br><span id="umgebung">(Innenstadt)</span></div>
-  <p class="park_situation">Freie Parkplätze:</p>
-</div>
-<div class="verlauf">
-  <div class="location">Heppenheim <br><span id="umgebung">(Bahnhof)</span></div>
-  <p class="park_situation">Freie Parkplätze:</p>
-</div>
-<div class="verlauf">
-  <div class="location">Stuttgart <br><span id="umgebung">(Kinopolis)</span></div>
-  <p class="park_situation">Freie Parkplätze:</p>
-</div>
+
 </div>
 
 
