--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,5 +1,9 @@
 .landing {
-  height: 800px;
+  height: 900px;
+}
+
+.test {
+  position: relative;
 }
 
 .overview {
@@ -160,6 +164,7 @@ mat-datepicker-toggle {
 
 .verlauf {
     text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     top: 350px;
     position: relative;
     font-family: 'Oswald', sans-serif;
@@ -191,7 +196,8 @@ mat-datepicker-toggle {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 10px;
   font-weight: bolder;
-  text-align: left;
+  padding-bottom: 20px;
+  // text-align: left;
 }
 
 #umgebung {
@@ -200,4 +206,11 @@ mat-datepicker-toggle {
   font-size: 11px;
 }
 
-
+.freie_plaetze {
+  text-align: center;
+  color: rgb(85, 83, 83);
+  font-size: 25px;
+  text-align: center;
+  font-weight: bolder;
+  padding-top: 20px;
+}
