--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar color="primary">
     <mat-toolbar-row>
       <img id="logo" (click)="onMainMenu()" src="https://img.icons8.com/dusk/64/000000/city.png"/>
-      <span id="company_name">Parche</span>
+      <span id="company_name">Parge</span>
       <span class="spacer"></span>
 
       <section>
